<resources>
    <string name="app_name">FoodResQ</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="new_to_foodresq">New to FoodResQ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="activity">Activity</string>
    <string name="history">History</string>
    <string name="spinner_title">Select the user type</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="add_food">Add food</string>
    <string name="food_type">Food Type</string>
    <string name="quantity">Quantity</string>
    <string name="best_before">Best Before</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forget_password">Forget Password</string>
    <string name="location">Location</string>
    <string name="_10_lb">10 lb</string>
    <string name="done">Done</string>
</resources>