<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_activity"
            android:title="@string/activity" />

    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_history"
                    android:title="@string/history" />

                <item
                    android:id="@+id/nav_faq"
                    android:title="@string/faq" />

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />

            </group>
        </menu>
    </item>

</menu>